--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 3.12)  
+cmake_minimum_required (VERSION 3.12)
 # 3.9: MPI::MPI_Fortran, 3.11: Lapack,  3.12 find_ROOT
 project(test_gem Fortran)
 enable_testing()
@@ -9,10 +9,10 @@ if(NOT hasParent)
     set(realbits 64)
   endif()
 
-  list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake/Modules/)
-  include(../cmake/compilers.cmake)
-  include(../cmake/libraries.cmake)
-  include(${PROJECT_SOURCE_DIR}/../cmake/mumps.cmake)
+  list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURENT_SOURCE_DIR}/../cmake/Modules/)
+  include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/compilers.cmake)
+  include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/libraries.cmake)
+  include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/mumps.cmake)
 endif()
 
 find_package(MPI REQUIRED COMPONENTS Fortran)
@@ -21,12 +21,11 @@ add_executable(testmpi test_mpi.f90)
 target_link_libraries(testmpi PRIVATE MPI::MPI_Fortran)
 target_compile_options(testmpi PRIVATE ${FFLAGS})
 add_test(NAME MPIexist COMMAND testmpi)
-  
-set_tests_properties(MPIexist PROPERTIES 
+
+set_tests_properties(MPIexist PROPERTIES
   TIMEOUT 5
   FIXTURES_SETUP MPIMUMPS)
 #---------------
-
 
 add_executable(testmumps test_mumps.f90)
 target_include_directories(testmumps PRIVATE ${MUMPS_INCLUDE_DIRS})
@@ -37,8 +36,8 @@ target_link_libraries(testmumps PRIVATE
 add_test(NAME MUMPS
   COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${CMAKE_CURRENT_BINARY_DIR}/testmumps
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-  
-set_tests_properties(MUMPS PROPERTIES 
+
+set_tests_properties(MUMPS PROPERTIES
   TIMEOUT 5
   DEPENDS MPIexist
   FIXTURES_SETUP MPIMUMPS)
