--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.12)
 # 3.9: MPI::MPI_Fortran, 3.11: Lapack,  3.12 find_ROOT
-project(test_gem Fortran)
+project(test_gem C Fortran)
 enable_testing()
 
 get_directory_property(hasParent PARENT_DIRECTORY)
@@ -9,15 +9,13 @@ if(NOT hasParent)
     set(realbits 64)
   endif()
 
-  list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURENT_SOURCE_DIR}/../cmake/Modules/)
+  list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../cmake/Modules/)
   include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/compilers.cmake)
   include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/libraries.cmake)
   include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/mumps.cmake)
 endif()
 
 #----------------
-
-find_package(MPI REQUIRED COMPONENTS Fortran)
 
 add_executable(testmpi test_mpi.f90)
 target_link_libraries(testmpi PRIVATE MPI::MPI_Fortran)
@@ -36,7 +34,7 @@ target_link_libraries(testmumps PRIVATE
                      ${MUMPS_LIBRARIES}
                      MPI::MPI_Fortran)
 add_test(NAME MUMPS
-  COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${CMAKE_CURRENT_BINARY_DIR}/testmumps
+  COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:testmumps>
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 set_tests_properties(MUMPS PROPERTIES
