--- a/numerical/CMakeLists.txt
+++ b/numerical/CMakeLists.txt
@@ -8,7 +8,7 @@ if(NOT hasParent)
   if(NOT realbits)
     set(realbits 64)
   endif()
-  list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake/Modules/)
+  list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../cmake/Modules/)
   include(../cmake/compilers.cmake)
   include(../cmake/libraries.cmake)
 endif()
@@ -48,15 +48,12 @@ set_target_properties(calculus PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINAR
 
 # ----- diffusion
 add_library(diffusion diffusion/diffusion.F90)
-target_link_libraries(diffusion PRIVATE grid)
+target_link_libraries(diffusion PRIVATE grid ${LAPACK_LIBRARIES})
 target_compile_options(diffusion PRIVATE ${FFLAGS})
-if(LAPACK95_FOUND)
-  target_link_libraries(diffusion PRIVATE ${LAPACK95_LIBRARIES})
-  target_include_directories(diffusion PRIVATE ${LAPACK95_INCLUDE_DIRS})
-else()
-  target_sources(diffusion PRIVATE ${PROJECT_SOURCE_DIR}/../vendor/lapack95/gbsv.F90)
+target_include_directories(diffusion PRIVATE ${LAPACK_INCLUDE_DIRS})
+if(NOT LAPACK_LAPACK95_FOUND)
+  target_sources(diffusion PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../vendor/lapack95/gbsv.F90)
   target_compile_definitions(diffusion PRIVATE REALBITS=${realbits})
-  target_link_libraries(diffusion PRIVATE ${LAPACK_LIBRARIES})
 endif()
 set_target_properties(diffusion PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
