--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,9 @@ endif(USEGLOW)
 
 add_subdirectory(numerical)
 
-add_library(io io/io.F90 io/mkdir.F90 io/expanduser.f90 io/formats.f90)
-target_link_libraries(io PRIVATE const mpimod grid calculus)
+add_subdirectory(io)
+add_library(io io/io.F90)
+target_link_libraries(io PRIVATE const mpimod grid calculus fsutils)
 target_compile_definitions(io PRIVATE TRACE=${TRACE})
 target_compile_options(io PRIVATE ${FFLAGS})
 
@@ -119,11 +120,6 @@ else()
   include(${PROJECT_SOURCE_DIR}/cmake/test2d.cmake)
   include(${PROJECT_SOURCE_DIR}/cmake/test3d.cmake)
 endif()
-
-add_executable(test_formats tests/test_formats.f90)
-target_compile_options(test_formats PRIVATE ${FFLAGS})
-target_link_libraries(test_formats PRIVATE io)
-add_test(NAME DateFormats COMMAND test_formats)
 
 add_executable(test_rollover tests/test_dayrollover.f90)
 target_compile_options(test_rollover PRIVATE ${FFLAGS})
