time as own subproject
use wp for now

confirm SZA works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,15 +50,11 @@ add_library(temporal temporal/temporal.f90)
 target_link_libraries(temporal PRIVATE const mpimod grid MPI::MPI_Fortran)
 target_compile_options(temporal PRIVATE ${FFLAGS})
 
-add_library(timeutils temporal/timeutils.f90)
-target_link_libraries(timeutils PRIVATE const)
-target_compile_options(timeutils PRIVATE ${FFLAGS})
+add_subdirectory(temporal)
 
 add_library(neutral neutral/neutral.f90)
 target_link_libraries(neutral PUBLIC interp io msis timeutils MPI::MPI_Fortran)
 target_compile_options(neutral PRIVATE ${FFLAGS})
-
-
 
 add_library(collision collisions/collisions.f90)
 target_link_libraries(collision PRIVATE const)
@@ -120,8 +116,3 @@ else()
   include(${PROJECT_SOURCE_DIR}/cmake/test2d.cmake)
   include(${PROJECT_SOURCE_DIR}/cmake/test3d.cmake)
 endif()
-
-add_executable(test_rollover tests/test_dayrollover.f90)
-target_compile_options(test_rollover PRIVATE ${FFLAGS})
-target_link_libraries(test_rollover PRIVATE timeutils const)
-add_test(NAME DateRollover COMMAND test_rollover)
