--- a/io/CMakeLists.txt
+++ b/io/CMakeLists.txt
@@ -23,8 +23,14 @@ add_library(fsutils mkdir.F90 expanduser.f90 formats.f90)
 target_compile_options(fsutils PRIVATE ${FFLAGS})
 set_target_properties(fsutils PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
+add_library(logging logging.f90)
+target_compile_options(logging PRIVATE ${FFLAGS})
+set_target_properties(logging PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
+
 add_executable(test_formats test_formats.f90)
 target_compile_options(test_formats PRIVATE ${FFLAGS})
 target_link_libraries(test_formats PRIVATE fsutils timeutils)
 set_target_properties(test_formats PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 add_test(NAME DateFormats COMMAND test_formats)
+set_tests_properties(DateFormats PROPERTIES TIMEOUT 5.0
+  FIXTURES_SETUP IOfmt)
