--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ classifiers =
   Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
   Topic :: Scientific/Engineering :: Atmospheric Science
 license_file = LICENSE
 long_description = file: README.md
@@ -32,16 +33,3 @@ setup_requires =
 include_package_data = True
 packages = find:
 install_requires =
-  oct2py
-
-[flake8]
-max-line-length = 132
-exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
-
-[coverage:run]
-cover_pylib = false
-omit =
-  /home/travis/virtualenv/*
-  */site-packages/*
-  */bin/*
-
