Squashed commit of the following:
commit a2cc810459666a4e7450e781bde1d2e5d990c5a0
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Mon Jul 15 17:04:55 2019 -0400

    18.04

commit dfab96144bff4fe0266c3036a20489c7f0e566ea
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Mon Jul 15 16:57:59 2019 -0400

    cmake312

commit 9cd5715063ab428fa9bb5b2ac4797c962ab1a025
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Mon Jul 15 16:51:22 2019 -0400

    cmake version

commit 0325b8fdd92c39215a09d4c50a13c604ef2dcefb
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Mon Jul 15 16:46:34 2019 -0400

    envvar

commit fd773126e3be84c6b3bafe6e760493700599996b
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Mon Jul 15 16:36:47 2019 -0400

    azure apt update

commit 5f19f8a5b05964fed29a288a4b21a51e8420233f
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Mon Jul 15 16:33:23 2019 -0400

    azuresudo

commit 06accb8173dae7ad1972e55a4bd17b9a2bb68064
Author: Michael Hirsch, Ph.D <10931741+scivision@users.noreply.github.com>
Date:   Mon Jul 15 16:31:28 2019 -0400

    Update azure-pipelines.yaml for Azure Pipelines

commit 6d725ff6bdb69d08cf43a83bc52fa7a415a4a6d0
Author: Michael Hirsch, Ph.D <10931741+scivision@users.noreply.github.com>
Date:   Mon Jul 15 16:30:26 2019 -0400

    Set up CI with Azure Pipelines

commit de5b315e674fda15a5d2c6cd3e78dd68d79d0ee1
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Mon Jul 15 16:25:33 2019 -0400

    init azure

CItemplate

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,10 +6,11 @@ clone_depth: 25
 build: off
 
 init:
+- sh: sudo apt update -q > /dev/null
 - sh: sudo apt install -yq --no-install-recommends libmumps-dev liblapack-dev libscalapack-mpi-dev libopenmpi-dev openmpi-bin > /dev/null
 
 install:
-- cmake -B build -S .
+- cmake -B build -S . -DNP=2
 - cmake --build build --parallel
 
 test_script:
