--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.1.0
 author = Michael Hirsch, Ph.D.
 author_email = scivision@users.noreply.github.com
 description = 3-D ionospheric model plotting suite
-url = https://github.com/mattzett/gemini
+url = https://github.com/gemini3d/gemini
 keywords =
   mesosphere
   stratosphere
@@ -20,16 +20,19 @@ classifiers =
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Topic :: Scientific/Engineering :: Atmospheric Science
-license_file = LICENSE
+license_file =
+  LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown
 
 [options]
 python_requires = >= 3.5
-setup_requires =
-  setuptools >= 38.6
-  pip >= 10
-  twine >= 1.11
-include_package_data = True
+zip_safe = False
 packages = find:
 install_requires =
+
+[options.extras_require]
+tests =
+  pytest >= 3.9
+  flake8
+  mypy
